# pismo-visa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.api.yml  docker-compose.db.yml  docker-compose.k6.yml  docker-compose.test.yml  flyway.toml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: accounts.py  transactions.py
app/core/: config.py  database.py
app/models/: __init__.py  account.py  operation_type.py  transaction.py
app/schemas/: __init__.py  account.py  operation_type.py  transaction.py
app/services/: account_service.py  transaction_service.py
flyway/sql/: V1__init.sql
k6/: load_test.js
tests/integration/: conftest.py  test_accounts.py  test_health.py  test_transactions.py
tests/unit/: conftest.py  test_health.py
tests/unit/endpoints/: test_accounts.py  test_transactions.py
tests/unit/services/: test_account_service.py  test_transaction_service.py
